# tsp-ilp-gnn-thesis

./: .gitignore  README.md  docker-compose.yaml  environment.yml  gnn_hyperparameters_evaluation.ipynb  pyproject.toml
docs/: master_thesis.docx  presentation.pptx  ΜεταπτυχιακήΔιατριβή.docx  μεταπτυχιακη_διατριβή.docx  μεταπτυχιακη_διατριβή.docx
src/: main.py
src/configs/: __init__.py  configs.ini  configs.py
src/container/: Dockerfile  main.py  utils.py
src/data_generation_scrpts/: main.py
src/gnn/: __init__.py  dataset.py  gat.py  utils.py
src/jobs/: base_job.py  get_predictions.py  load_model.py  load_tsp_dataset.py  orchestrator.py  train_gnn_model.py
src/pyutils/: __init__.py  config.py  logger.py
src/tsp/: __init__.py  solver.py  utils.py
src/tsp_gnn_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
